fix bug where quote shouldn't be visible

--- a/src/scss/themes/_superbowl-2018.scss
+++ b/src/scss/themes/_superbowl-2018.scss
@@ -12,7 +12,6 @@ html:before{
 	background-image: url("../img/SB-hero.png");
 	background-position: center top;
 	background-repeat: no-repeat;
-	background-size: contain;
 }
 #header{
 	background: #fff;
